--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,15 @@ uuid = "26aafa55-59f7-45ac-9841-9c476cd28090"
 authors = ["Crt Lozej"]
 version = "0.1.0"
 
+[deps]
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+
 [compat]
-julia = "1"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
