--- a/Project.toml
+++ b/Project.toml
@@ -12,12 +12,12 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-julia = "1.9"
 LsqFit = "0.13"
 Makie = "0.19"
-Polynomials = "3.2"
+Polynomials = "3.2, 4"
 SpecialFunctions = "2.3"
 StatsBase = "0.33"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
