--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,8 @@
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 SpectralStatistics = "26aafa55-59f7-45ac-9841-9c476cd28090"
 
 [compat]
 Documenter = "1.1"
+CairoMakie = "0.10"
